@@ -16,14 +16,13 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.api.security.user.UserManager;
 import org.apache.jackrabbit.oak.api.Root;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentity;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentityRef;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalLoginTestBase;
@@ -245,7 +244,7 @@ public class DefaultSyncHandlerTest extends ExternalLoginTestBase {
         sync(USER_ID, false);
 
         // membership-nesting is 1 => expect only 'USER_ID' plus the declared group-membership
-        Set<String> expected = CollectionUtils.toSet(USER_ID);
+        Set<String> expected = SetUtils.toSet(USER_ID);
         for (ExternalIdentityRef extRef : idp.getUser(USER_ID).getDeclaredGroups()) {
             expected.add(extRef.getId());
         }
@@ -352,7 +351,7 @@ public class DefaultSyncHandlerTest extends ExternalLoginTestBase {
     @Test
     public void testActivate() {
         DefaultSyncHandler handler = new DefaultSyncHandler();
-        Map<String,Object> props = ImmutableMap.of(DefaultSyncConfigImpl.PARAM_NAME, "testName");
+        Map<String,Object> props = Map.of(DefaultSyncConfigImpl.PARAM_NAME, "testName");
         context.registerInjectActivateService(handler, props);
 
         assertEquals("testName", handler.getName());
