@@ -19,7 +19,6 @@
 package org.apache.jackrabbit.oak.plugins.observation.filter;
 
 import static java.util.Objects.requireNonNull;
-import static org.apache.jackrabbit.guava.common.collect.Lists.newArrayList;
 import static javax.jcr.observation.Event.NODE_ADDED;
 import static javax.jcr.observation.Event.NODE_MOVED;
 import static javax.jcr.observation.Event.NODE_REMOVED;
@@ -29,6 +28,8 @@ import static javax.jcr.observation.Event.PROPERTY_CHANGED;
 import static javax.jcr.observation.Event.PROPERTY_REMOVED;
 import static org.apache.jackrabbit.oak.commons.PathUtils.isAncestor;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -38,9 +39,8 @@ import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.oak.api.PropertyState;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.plugins.nodetype.TypePredicate;
 import org.apache.jackrabbit.oak.plugins.observation.filter.UniversalFilter.Selector;
 import org.apache.jackrabbit.oak.plugins.tree.factories.RootFactory;
@@ -60,11 +60,11 @@ public final class FilterBuilder {
     private boolean includeSessionLocal;
     private boolean includeClusterExternal;
     private boolean includeClusterLocal = true;
-    private final List<String> subTrees = newArrayList();
+    private final List<String> subTrees = new ArrayList<>();
     private final Set<String> pathsForMBean = new HashSet<>();
     private Condition condition = includeAll();
     private ChangeSetFilter changeSetFilter = new ChangeSetFilter() {
-        
+
         @Override
         public boolean excludes(ChangeSet changeSet) {
             return false;
@@ -77,7 +77,7 @@ public final class FilterBuilder {
         @NotNull
         EventFilter createFilter(@NotNull NodeState before, @NotNull NodeState after);
     }
-    
+
     @NotNull
     public FilterBuilder setChangeSetFilter(@NotNull ChangeSetFilter changeSetFilter) {
         this.changeSetFilter = changeSetFilter;
@@ -108,7 +108,7 @@ public final class FilterBuilder {
         subTrees.add(requireNonNull(absPath));
         return this;
     }
-    
+
     /**
      * Adds paths to the FilterConfigMBean's getPaths set
      * @param paths
@@ -126,9 +126,9 @@ public final class FilterBuilder {
      */
     @NotNull
     private Iterable<String> getSubTrees() {
-        return subTrees.isEmpty() ? ImmutableList.of("/") : subTrees;
+        return subTrees.isEmpty() ? List.of("/") : subTrees;
     }
-    
+
     public FilterBuilder aggregator(EventAggregator aggregator) {
         this.aggregator = aggregator;
         return this;
@@ -341,17 +341,17 @@ public final class FilterBuilder {
      */
     @NotNull
     public Condition any(@NotNull Condition... conditions) {
-        return new AnyCondition(newArrayList(requireNonNull(conditions)));
+        return new AnyCondition(new ArrayList<>(Arrays.asList(requireNonNull(conditions))));
     }
-
     /**
      * A compound condition that holds when all of its constituents hold.
+
      * @param conditions conditions of which all must hold in order for this condition to hold
      * @return  any condition
      */
     @NotNull
     public Condition all(@NotNull Condition... conditions) {
-        return new AllCondition(newArrayList(requireNonNull(conditions)));
+        return new AllCondition(new ArrayList<>(Arrays.asList(requireNonNull(conditions))));
     }
 
     /**
@@ -463,7 +463,7 @@ public final class FilterBuilder {
         return new FilterConfigMBean() {
             @Override
             public String[] getPaths() {
-                return Iterables.toArray(pathsForMBean, String.class);
+                return IterableUtils.toArray(pathsForMBean, String.class);
             }
 
             @Override
@@ -602,12 +602,12 @@ public final class FilterBuilder {
         }
 
         public AnyCondition(Condition... conditions) {
-            this(newArrayList(conditions));
+            this(new ArrayList<>(Arrays.asList(conditions)));
         }
 
         @Override
         public EventFilter createFilter(NodeState before, NodeState after) {
-            List<EventFilter> filters = newArrayList();
+            List<EventFilter> filters = new ArrayList<>();
             for (Condition condition : conditions) {
                 if (condition == ConstantCondition.INCLUDE_ALL) {
                     return ConstantFilter.INCLUDE_ALL;
@@ -629,12 +629,12 @@ public final class FilterBuilder {
         }
 
         public AllCondition(Condition... conditions) {
-            this(newArrayList(conditions));
+            this(new ArrayList<>(Arrays.asList(conditions)));
         }
 
         @Override
         public EventFilter createFilter(NodeState before, NodeState after) {
-            List<EventFilter> filters = newArrayList();
+            List<EventFilter> filters = new ArrayList<>();
             for (Condition condition : conditions) {
                 if (condition == ConstantCondition.EXCLUDE_ALL) {
                     return ConstantFilter.EXCLUDE_ALL;
