@@ -23,8 +23,6 @@ import javax.jcr.Value;
 import javax.jcr.ValueFactory;
 import javax.jcr.security.AccessControlException;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
 import org.apache.jackrabbit.oak.api.PropertyState;
@@ -76,7 +74,7 @@ public class AbstractRestrictionProviderTest extends AbstractSecurityTest implem
         RestrictionDefinition glob = new RestrictionDefinitionImpl(REP_GLOB, Type.STRING, false);
         RestrictionDefinition nts  = new RestrictionDefinitionImpl(REP_NT_NAMES, Type.NAMES, false);
         RestrictionDefinition mand = new RestrictionDefinitionImpl("mandatory", Type.BOOLEAN, true);
-        Map<String, ? extends RestrictionDefinition> supported = ImmutableMap.of(glob.getName(), glob, nts.getName(), nts, mand.getName(), mand);
+        Map<String, ? extends RestrictionDefinition> supported = Map.of(glob.getName(), glob, nts.getName(), nts, mand.getName(), mand);
         restrictionProvider = new TestProvider(supported);
     }
 
@@ -95,7 +93,7 @@ public class AbstractRestrictionProviderTest extends AbstractSecurityTest implem
         Tree tmp = TreeUtil.addChild(rootNode, "testRoot", JcrConstants.NT_UNSTRUCTURED);
         Tree policy = TreeUtil.addChild(tmp, REP_POLICY, NT_REP_ACL);
         Tree ace = TreeUtil.addChild(policy, "ace0", NT_REP_GRANT_ACE);
-        restrictionProvider.writeRestrictions(tmp.getPath(), ace, ImmutableSet.copyOf(restrictions));
+        restrictionProvider.writeRestrictions(tmp.getPath(), ace, Set.of(restrictions));
         return ace;
     }
 
