@@ -16,13 +16,12 @@
  */
 package org.apache.jackrabbit.oak.jcr.security.authorization;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import javax.jcr.Session;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Maps;
 import org.apache.jackrabbit.api.JackrabbitSession;
 import org.apache.jackrabbit.oak.spi.security.authorization.permission.Permissions;
 
@@ -32,7 +31,7 @@ import org.apache.jackrabbit.oak.spi.security.authorization.permission.Permissio
 public class HasPermissionTest extends AbstractEvaluationTest {
 
     public void testEmpty() throws Exception {
-        List<String> paths = ImmutableList.of(
+        List<String> paths = List.of(
                 "/", path, childPPath, path + "/rep:policy",
                 "/nonExisting", path + "/nonExisting");
 
@@ -47,7 +46,7 @@ public class HasPermissionTest extends AbstractEvaluationTest {
     }
 
     public void testSingle() throws Exception {
-        Map<String, Boolean> map = Maps.newHashMap();
+        Map<String, Boolean> map = new HashMap<>();
         map.put("/", true);
         map.put(path, true);
         map.put(childPPath, true);
@@ -63,7 +62,7 @@ public class HasPermissionTest extends AbstractEvaluationTest {
     }
 
     public void testDuplicate() throws Exception {
-        Map<String, Boolean> map = Maps.newHashMap();
+        Map<String, Boolean> map = new HashMap<>();
         map.put("/", true);
         map.put(path, true);
         map.put(childPPath, true);
@@ -82,7 +81,7 @@ public class HasPermissionTest extends AbstractEvaluationTest {
     }
 
     public void testMultiple() throws Exception {
-        List<String> paths = ImmutableList.of(
+        List<String> paths = List.of(
                 "/", path, childPPath, path + "/rep:policy",
                 "/nonExisting", path + "/nonExisting");
 
