@@ -22,7 +22,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.oak.plugins.index.lucene.util.CompressingCodec;
 import org.apache.jackrabbit.oak.plugins.index.lucene.util.TokenizerChain;
 import org.apache.jackrabbit.oak.plugins.index.lucene.writer.CommitMitigatingTieredMergePolicy;
@@ -78,17 +77,17 @@ public class LuceneIndexDefinition extends IndexDefinition {
         this.codec = createCodec();
     }
 
-    public static Builder newBuilder(NodeState root, NodeState defn, String indexPath){
-        return (Builder)new Builder()
+    public static Builder newLuceneBuilder(NodeState root, NodeState defn, String indexPath){
+        return (Builder) new Builder()
                 .root(root)
                 .defn(defn)
                 .indexPath(indexPath);
     }
 
-    public static class Builder extends IndexDefinition.Builder {
+    public static class Builder extends IndexDefinition.Builder<LuceneIndexDefinition> {
         @Override
         public LuceneIndexDefinition build() {
-            return (LuceneIndexDefinition)super.build();
+            return super.build();
         }
 
         @Override
@@ -98,7 +97,7 @@ public class LuceneIndexDefinition extends IndexDefinition {
         }
 
         @Override
-        protected IndexDefinition createInstance(NodeState indexDefnStateToUse) {
+        protected LuceneIndexDefinition createInstance(NodeState indexDefnStateToUse) {
             return new LuceneIndexDefinition(root, indexDefnStateToUse, version, uid, indexPath);
         }
     }
@@ -145,10 +144,8 @@ public class LuceneIndexDefinition extends IndexDefinition {
         if (!evaluatePathRestrictions()){
             result = defaultAnalyzer;
         } else {
-            Map<String, Analyzer> analyzerMap = ImmutableMap.<String, Analyzer>builder()
-                    .put(FieldNames.ANCESTORS,
-                            new TokenizerChain(new PathHierarchyTokenizerFactory(Collections.emptyMap())))
-                    .build();
+            Map<String, Analyzer> analyzerMap = Map.of(
+                    FieldNames.ANCESTORS, new TokenizerChain(new PathHierarchyTokenizerFactory(Collections.emptyMap())));
             result = new PerFieldAnalyzerWrapper(defaultAnalyzer, analyzerMap);
         }
 
@@ -172,7 +169,7 @@ public class LuceneIndexDefinition extends IndexDefinition {
             analyzerMap.put(ANL_DEFAULT, new OakAnalyzer(VERSION, true));
         }
 
-        return ImmutableMap.copyOf(analyzerMap);
+        return Collections.unmodifiableMap(analyzerMap);
     }
 
 
