@@ -38,7 +38,6 @@ import javax.jcr.security.AccessControlManager;
 import javax.jcr.security.AccessControlPolicy;
 import javax.jcr.security.AccessControlPolicyIterator;
 import javax.jcr.security.Privilege;
-import javax.security.auth.Subject;
 
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.JackrabbitRepository;
@@ -50,6 +49,7 @@ import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.api.ContentRepository;
 import org.apache.jackrabbit.oak.api.ContentSession;
 import org.apache.jackrabbit.oak.api.Root;
+import org.apache.jackrabbit.oak.commons.jdkcompat.Java23Subject;
 import org.apache.jackrabbit.oak.composite.CompositeNodeStore;
 import org.apache.jackrabbit.oak.jcr.Jcr;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
@@ -106,8 +106,6 @@ import org.apache.jackrabbit.oak.spi.state.NodeBuilder;
 import org.apache.jackrabbit.oak.spi.state.NodeStore;
 import org.jetbrains.annotations.NotNull;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.jetbrains.annotations.Nullable;
 
 /**
@@ -188,7 +186,7 @@ public class Persistence {
         userConfigMap.put(UserConstants.PARAM_GROUP_PATH, "/home/groups");
         userConfigMap.put(UserConstants.PARAM_USER_PATH, "/home/users");
         userConfigMap.put(UserConstants.PARAM_DEFAULT_DEPTH, 1);
-        ConfigurationParameters userConfig = ConfigurationParameters.of(ImmutableMap.of(
+        ConfigurationParameters userConfig = ConfigurationParameters.of(Map.of(
                 UserConfiguration.NAME,
                 ConfigurationParameters.of(userConfigMap)));
         SecurityProvider securityProvider = SecurityProviderBuilder.newBuilder().with(userConfig).build();
@@ -288,7 +286,7 @@ public class Persistence {
                                          SecurityProvider securityProvider) throws RepositoryException {
         ContentSession cs = null;
         try {
-            cs = Subject.doAsPrivileged(SystemSubject.INSTANCE, new PrivilegedExceptionAction<ContentSession>() {
+            cs = Java23Subject.doAsPrivileged(SystemSubject.INSTANCE, new PrivilegedExceptionAction<ContentSession>() {
                 @Override
                 public ContentSession run() throws Exception {
                     return repo.login(null, null);
