@@ -16,15 +16,13 @@
  */
 package org.apache.jackrabbit.oak.spi.query;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.jetbrains.annotations.NotNull;
-
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 
 /**
  * This {@code QueryIndexProvider} aggregates a list of query index providers
@@ -49,29 +47,28 @@ public class CompositeQueryIndexProvider implements QueryIndexProvider {
             return new QueryIndexProvider() {
                 @Override
                 public List<QueryIndex> getQueryIndexes(NodeState nodeState) {
-                    return ImmutableList.of();
+                    return List.of();
                 }
             };
         } else if (providers.size() == 1) {
             return providers.iterator().next();
         } else {
             return new CompositeQueryIndexProvider(
-                    ImmutableList.copyOf(providers));
+                    List.copyOf(providers));
         }
     }
 
     @Override @NotNull
     public List<? extends QueryIndex> getQueryIndexes(NodeState nodeState) {
-        List<QueryIndex> indexes = Lists.newArrayList();
+        List<QueryIndex> indexes = new ArrayList<>();
         for (QueryIndexProvider provider : providers) {
             indexes.addAll(provider.getQueryIndexes(nodeState));
         }
         return indexes;
     }
-    
+
     @Override
     public String toString() {
         return getClass().getName() + ": " + providers.toString();
     }
-
 }
