@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.token;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Before;
@@ -26,6 +24,7 @@ import org.junit.Test;
 import javax.jcr.Credentials;
 import javax.jcr.GuestCredentials;
 import javax.jcr.SimpleCredentials;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.Assert.assertFalse;
@@ -58,7 +57,7 @@ public class CompositeTokenProviderTest {
     public void testNullProvider() {
         TokenProvider tp = CompositeTokenProvider.newInstance();
 
-        assertSame(tp, CompositeTokenProvider.newInstance(ImmutableList.<TokenProvider>of()));
+        assertSame(tp, CompositeTokenProvider.newInstance(List.of()));
 
         Credentials creds = new Credentials() {};
 
@@ -66,7 +65,7 @@ public class CompositeTokenProviderTest {
         assertFalse(tp.doCreateToken(creds));
 
         assertNull(tp.createToken(null, null));
-        assertNull(tp.createToken(USERID, ImmutableMap.<String, String>of()));
+        assertNull(tp.createToken(USERID, Map.of()));
 
         assertNull(tp.createToken(null));
         assertNull(tp.createToken(creds));
@@ -82,7 +81,7 @@ public class CompositeTokenProviderTest {
         TokenProvider tp = CompositeTokenProvider.newInstance(base);
 
         assertSame(base, tp);
-        assertSame(base, CompositeTokenProvider.newInstance(ImmutableList.of(base)));
+        assertSame(base, CompositeTokenProvider.newInstance(List.of(base)));
     }
 
     @Test
@@ -93,7 +92,7 @@ public class CompositeTokenProviderTest {
     @Test
     public void testCreateCompositeProviderFromList() {
         TokenProvider base = mock(TokenProvider.class);
-        TokenProvider tp = CompositeTokenProvider.newInstance(ImmutableList.of(base, base));
+        TokenProvider tp = CompositeTokenProvider.newInstance(List.of(base, base));
         assertTrue(tp instanceof CompositeTokenProvider);
     }
 
@@ -114,22 +113,22 @@ public class CompositeTokenProviderTest {
 
     @Test
     public void testCreateTokenFromId() {
-        assertSame(info, composite.createToken(USERID, ImmutableMap.of()));
+        assertSame(info, composite.createToken(USERID, Map.of()));
     }
 
     @Test
     public void testCreateTokenFromUnknownId() {
-        assertNull(composite.createToken("unknown", ImmutableMap.of()));
+        assertNull(composite.createToken("unknown", Map.of()));
     }
 
     @Test
     public void testCreateTokenFromIdFirstWins() {
         TokenInfo ti = mock(TokenInfo.class);
-        TokenProvider tp1 = when(mock(TokenProvider.class).createToken(USERID, ImmutableMap.of())).thenReturn(ti).getMock();
+        TokenProvider tp1 = when(mock(TokenProvider.class).createToken(USERID, Map.of())).thenReturn(ti).getMock();
         TokenProvider tp2 = new TestTokenProvider();
 
         TokenProvider ctp = CompositeTokenProvider.newInstance(tp1, tp2);
-        assertSame(ti, ctp.createToken(USERID, ImmutableMap.of()));
+        assertSame(ti, ctp.createToken(USERID, Map.of()));
     }
 
     @Test
