@@ -16,12 +16,11 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authorization.restriction;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
 import org.apache.jackrabbit.oak.plugins.memory.PropertyStates;
 import org.apache.jackrabbit.oak.plugins.value.jcr.PartialValueFactory;
@@ -84,7 +83,7 @@ public class AbstractRestrictionProviderTest implements AccessControlConstants {
         when(undef.getName()).thenReturn("undefined");
         when(undef.getRequiredType()).thenReturn((Type) Type.UNDEFINED);
 
-        supported = ImmutableMap.of(glob.getName(), glob, nts.getName(), nts, mand.getName(), mand, undef.getName(), undef);
+        supported = Map.of(glob.getName(), glob, nts.getName(), nts, mand.getName(), mand, undef.getName(), undef);
         restrictionProvider = new AbstractRestrictionProvider(supported) {
             @NotNull
             @Override
@@ -112,7 +111,7 @@ public class AbstractRestrictionProviderTest implements AccessControlConstants {
             properties.add(r.getProperty());
         }
         properties.add(primaryType);
-        properties.add(PropertyStates.createProperty(Iterables.get(AccessControlConstants.ACE_PROPERTY_NAMES, 0), "value"));
+        properties.add(PropertyStates.createProperty(IterableUtils.get(AccessControlConstants.ACE_PROPERTY_NAMES, 0), "value"));
 
         when(restrictionsTree.getProperties()).thenReturn((Iterable)properties);
         when(restrictionsTree.exists()).thenReturn(true);
