@@ -15,19 +15,17 @@
  * limitations under the License.
  *
  */
-
 package org.apache.jackrabbit.oak.segment.tool.iotrace;
 
-import static org.apache.jackrabbit.guava.common.collect.Lists.newArrayList;
 import static java.util.Collections.emptyList;
 import static org.apache.jackrabbit.oak.commons.PathUtils.elements;
 import static org.apache.jackrabbit.oak.plugins.memory.EmptyNodeState.EMPTY_NODE;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
+import java.util.ArrayList;
 import java.util.List;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.oak.spi.state.NodeBuilder;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.jetbrains.annotations.NotNull;
@@ -53,7 +51,7 @@ public class RandomTraceTest {
 
     @Test
     public void testTraverseEmptyTree() {
-        List<List<String>> trace = newArrayList();
+        List<List<String>> trace = new ArrayList<>();
         new RandomAccessTrace(emptyList(), 0,10, trace::add)
             .run(createTree(emptyList()));
         assertEquals(0, trace.size());
@@ -61,17 +59,17 @@ public class RandomTraceTest {
 
     @Test
     public void testTraverseNonExistingPath() {
-        List<List<String>> trace = newArrayList();
-        new RandomAccessTrace(ImmutableList.of("/not/here"), 0, 1, trace::add)
+        List<List<String>> trace = new ArrayList<>();
+        new RandomAccessTrace(List.of("/not/here"), 0, 1, trace::add)
             .run(createTree(emptyList()));
         assertEquals(1, trace.size());
-        assertEquals(ImmutableList.of("/not/here"), trace.get(0));
+        assertEquals(List.of("/not/here"), trace.get(0));
     }
 
     @Test
     public void testTraverse() {
-        List<List<String>> trace = newArrayList();
-        ImmutableList<String> paths = ImmutableList.of("/a/b/c", "/d/e/f");
+        List<List<String>> trace = new ArrayList<>();
+        List<String> paths = List.of("/a/b/c", "/d/e/f");
         new RandomAccessTrace(paths, 0, 2, trace::add)
                 .run(createTree(paths));
         assertEquals(2, trace.size());
